reactapp: added support for npm start with Django added mobile banner to all games page added custom scrollbar to MainBlock fixed scrollbar showing on button hover reduced GameCard margin on desktop layout changed AppGrid to use display layout grid included Navbar and MobileBannerBuffer under MainBlock for scrollbar

--- a/neuro_arcade/reactapp/src/styles/Button.module.css
+++ b/neuro_arcade/reactapp/src/styles/Button.module.css
@@ -48,7 +48,7 @@
     right: 10%;
 }
 #MoreGames {
-    margin: 0 0 0 auto;
+    margin: 0 0 1em auto;
 }
 
 @media (max-width: 50em) {
